--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
-file.reference.jcalendar-1.4.jar=D:\\ULATINA\\4 CUATRI\\PROGRA 3\\Proyecto\\JCALENDAR\\lib\\jcalendar-1.4.jar
-user.properties.file=C:\\Users\\josep\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+file.reference.jcalendar-1.4.jar=/Users/fernando/Downloads/jcalendar-1.4 (1)/lib/jcalendar-1.4.jar
+user.properties.file=/Users/fernando/Library/Application Support/NetBeans/12.6/build.properties
