--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,10 +32,12 @@ dist.jar=${dist.dir}/PrograIIIProyectoFinalv2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\josep\\Desktop\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=D:\\ULATINA\\4 CUATRI\\PROGRA 3\\Proyecto\\JCALENDAR\\lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
