--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,9 @@
-file.reference.jcalendar-1.4.jar=D:\\ULATINA\\4 CUATRI\\PROGRA 3\\Proyecto\\JCALENDAR\\lib\\jcalendar-1.4.jar
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
 file.reference.jcalendar-1.4.jar-1=/Users/fernando/Downloads/jcalendar-1.4 (1)/lib/jcalendar-1.4.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\josep\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
