--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,8 @@ compile.on.save=false
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.jcalendar-1.4.jar-1=/Users/fernando/Downloads/jcalendar-1.4 (1)/lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=D:\\ULATINA\\4 CUATRI\\PROGRA 3\\Proyecto\\JCALENDAR\\lib\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.27.jar=D:\\ULATINA\\4 CUATRI\\PROGRA 3\\Proyecto\\JCALENDAR\\lib\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
