--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,15 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar-1=D:\\ULATINA\\4 CUATRI\\PROGRA 3\\Proyecto\\JCALENDAR\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.27.jar=/Users/fernando/Downloads/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar
+file.reference.mysql-connector-java-8.0.27.jar-1=D:\\ULATINA\\4 CUATRI\\PROGRA 3\\Proyecto\\mysql-connector-java-8.0.27.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.27.jar}
+    ${file.reference.mysql-connector-java-8.0.27.jar}:\
+    ${file.reference.mysql-connector-java-8.0.27.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
